--- a/bandlookmain-eng.css
+++ b/bandlookmain-eng.css
@@ -42,15 +42,14 @@ img {
   cursor: pointer;
   position: fixed;
   right: 0;
-  margin-right: 15px;
-  top: 0;
-  margin-top: 15px;
+  margin-right: 3vh;
   z-index: 1000000;
-  background: rgb(255, 94, 135);
-  opacity: 1;
+  background: #FF1953;
+  opacity: 0.7;
   border-radius: 100%;
-  border: solid 1px white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-style: solid;
+  border-width: 0px ;
+  border-color: black;
 }
 
 .img-menu-web {
@@ -97,35 +96,6 @@ ul li a {
   display: block;
   padding: 1.5em 3em;
   background-color: none;
-}
-
-.lang{
-  display: block;
-  position: fixed;
-  float: left;
-  bottom: 0;
-  margin: 4px;
-  padding-top: 5px;
-  padding-left: 3px;
-  padding-right: 3px;
-  color: black;
-  font-size: 18px;
-  background: white;
-  border-radius: 5px;
-  border: solid 2px black;
-  width: 24px;
-	height: 24px;
-	text-align: center;
-	vertical-align: middle;
-  z-index: 100000;
-}
-
-.lang:link {
-  text-decoration: none;
-}
-
-.lang:active {
-  background-color: hotpink;
 }
 
 
@@ -413,27 +383,6 @@ h5{
     margin-top: 0em;
     font-size: 4px;
 	 }
-
-   .lang{
-     display: block;
-     position: fixed;
-     left: auto;
-     top: 0;
-     right: 0;
-     margin: 1em;
-     margin-top: 1em;
-     margin-left: 0;
-     padding-top: 4px;
-     padding-left: 3px;
-     padding-right: 3px;
-     color: black;
-     font-size: 18px;
-     background: white;
-     border-radius: 5px;
-     border: solid 2px black;
-     width: 24px;
-   	height: 24px;
-   }
 
   .meni {
     font-style: #FF1953;
