--- a/medialook.css
+++ b/medialook.css
@@ -43,12 +43,15 @@ img {
   cursor: pointer;
   position: fixed;
   right: 0;
-  margin-right: 3vh;
+  margin-right: 15px;
+  top: 0;
+  margin-top: 15px;
   z-index: 1000000;
-  background: #FF1953;
-  opacity: 0.7;
+  background: rgb(255, 94, 135);
+  opacity: 1;
   border-radius: 100%;
-
+  border: solid 1px white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .img-menu-web {
@@ -100,6 +103,36 @@ ul li a {
   background-color: none;
 
 }
+
+.lang{
+  display: block;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin: 4px;
+  padding-top: 5px;
+  padding-left: 0;
+  padding-right: 3px;
+  color: black;
+  font-size: 18px;
+  background: white;
+  border-radius: 5px;
+  border: solid 2px black;
+  width: 24px;
+	height: 24px;
+	text-align: center;
+	vertical-align: middle;
+  z-index: 100000;
+}
+
+.lang:link {
+  text-decoration: none;
+}
+
+.lang:active {
+  background-color: hotpink;
+}
+
 
 .meni {
 	text-align: center;
@@ -387,6 +420,27 @@ li {
     font-size: 4px;
 	 }
 
+   .lang{
+     display: block;
+     position: fixed;
+     left: auto;
+     top: 0;
+     right: 0;
+     margin: 1em;
+     margin-top: 1em;
+     margin-left: 0;
+     padding-top: 4px;
+     padding-left: 3px;
+     padding-right: 3px;
+     color: black;
+     font-size: 18px;
+     background: white;
+     border-radius: 5px;
+     border: solid 2px black;
+     width: 24px;
+     height: 24px;
+   }
+
   .meni {
     font-style: #FF1953;
     font-size: 1.8em;
@@ -431,7 +485,7 @@ li {
     border-radius: 15px;
     margin: 0.5em;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-top: 1em;
+    margin-top: 2em;
     margin-bottom: 2em;
     margin-left: 2em;
     margin-right: 2em;
