--- a/vback.css
+++ b/vback.css
@@ -19,7 +19,7 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  top: 5vh;
+  top: 10vh;
   background-color: white;
   border-radius: 100%;
   width: 250px !important;
@@ -81,7 +81,7 @@ footer {
 
 .kontakt {
   text-align: center;
-  margin-top: 10em;
+  margin-top: 50%;
   background: none;
   margin-bottom: 2em;
   margin-left: 2em;
