--- a/medialook.css
+++ b/medialook.css
@@ -477,7 +477,7 @@ li {
 
   .media-cgp {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns:  25% 25% 25% 25%;
     grid-row-gap: 1em;
     padding: 2em;
     background: white;
